# startup-validator-agent

./: README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/api/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/architecture/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/database/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/engineering/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/feasibility/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/growth/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/hiring/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/infrastructure/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/market/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/agents/orchestrator/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/api/: deps.py  router.py
backend/app/core/: __init__.py  agent_runner.py  exceptions.py  llm.py  logging.py
backend/app/db/: __init__.py  client.py
backend/app/tools/: __init__.py  langchain_tools.py  reddit_search.py  search.py  search_cache.py  trends.py  web_search.py
backend/docs/: graphs.html
backend/scripts/: generate_graphs.py
backend/tests/: conftest.py  mock_data.py  test_agents.py  test_api.py  test_graph.py  test_models.py
frontend/: index.html  (+3 more)
(+51 files in other folders)
